# .dotfiles

./: .clang-format  .gtkrc-2.0  .stow-local-ignore  .tmux.conf  .zshrc  README.md  install_packages.sh
.config/: starship.toml  starship_matugen.toml
.config/bash/: .bash_profile  .bashrc
.config/btop/: btop.conf
.config/caelestia/: shell.json
.config/eww/: _styling.scss  eww.yuck  variables.yuck
.config/eww/my_scripts/: nm-tray.sh  open_bars.sh  toggle-powerprofile.sh
.config/fastfetch/: config.jsonc
.config/gtk-3.0/: colors.css  gtk.css  settings.ini
.config/gtk-4.0/: settings.ini
.config/hypr/: colors.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
.config/kitty/: colors-matugen.conf  kitty.conf
.config/lazygit/: config.yml
.config/lucien/: preferences.toml
.config/matugen/: config.toml
.config/mpv/: mpv.conf
.config/nvim/: README.md  init.lua
.config/nvim/lua/scripts/code_runner/templates/C++/: CMakeLists.txt
.config/qt5ct/: qt5ct.conf
.config/qt6ct/: qt6ct.conf
.config/rofi/: config.rasi
.config/tmux/: tmux.conf
.config/xdg-desktop-portal-termfilechooser/: config
.config/xsettingsd/: xsettingsd.conf
.config/yazi/: keymap.toml  theme.toml  wrapper.sh  yazi.toml
.config/zathura/: zathurarc
.config/zsh/: .zshrc
.local/docs/: latexindent.md  yazi.md
config/kitty/: colors-matugen.conf  colors-wallust.conf  kitty.conf
config/nvim/: README.md  init.lua
config/yazi/: wrapper.sh  yazi.toml
docs/: docs.md  yazi.md  zen.md
etc/keyd/: default.conf
scripts/: throne_post_install.sh
tmux/: .tmux.conf
zsh/: .zshrc
(+173 files in other folders)
